rating facil not done yet

--- a/profiles/templates/feed.html
+++ b/profiles/templates/feed.html
@@ -7,8 +7,7 @@
 {% block content %}
 <div class="jumbotron text-center">
   <div class="container">
-    <h1 class="display-4">Your stalker Feed 😉</h1>
-    <p class="lead">You're bad... very bad.</p>
+    <h1 class="display-4">Your Feed Page</h1>
   </div>
 </div>
 <div class="row">
