--- a/profiles/templates/followers.html
+++ b/profiles/templates/followers.html
@@ -9,7 +9,7 @@
   <div class="col-12">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title text-center">My Stalkers</h5>
+        <h5 class="card-title text-center">My Followers</h5>
       </div>
       <ul class="list-group list-group-flush">
         {% for follower in followers %}
