--- a/profiles/templates/following.html
+++ b/profiles/templates/following.html
@@ -9,7 +9,7 @@
   <div class="col-12">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title text-center">My Prey</h5>
+        <h5 class="card-title text-center">My Following</h5>
       </div>
       <ul class="list-group list-group-flush">
         {% for prey in following %}
