--- a/profiles/templates/search_users.html
+++ b/profiles/templates/search_users.html
@@ -5,16 +5,16 @@
 {% block content %}
 <div class="row text-center">
   <div class="col-12">
-    <h1>The people you're trying to stalk...😉</h1>
+    <h1>The people you're trying to Follow...😉</h1>
     <table class="table">
       <tbody>
         {% for person in users %}
         <tr>
           <td><a href="{% url 'profile' person.profile.pk %}">{{person}}</a></td>
             {% if person in prey_list %}
-              <td><a href="{% url 'follow' person.pk %}" class="btn btn-outline-danger">UnStalk</a></td>
+              <td><a href="{% url 'follow' person.pk %}" class="btn btn-outline-danger">UnFollow</a></td>
             {% else %}
-              <td><a href="{% url 'follow' person.pk %}" class="btn btn-outline-danger">Stalk</a></td>
+              <td><a href="{% url 'follow' person.pk %}" class="btn btn-outline-danger">Follow</a></td>
             {% endif %}
         </tr>
         {% endfor %}
