--- a/authentication/templates/base.html
+++ b/authentication/templates/base.html
@@ -10,59 +10,39 @@
 	</head>
 	<body>
 
- {% if request.user.is_authenticated %}
+      {% if request.user.is_authenticated %}
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="{% url 'profile' request.user.id %}">@{{request.user}}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-	<nav class="navbar navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">@{{request.user}}</a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'feed' %}">Feed</a>
+        </li>
 
-
-
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" 	aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-						<div class="navbar-nav">
-							<a class="nav-item nav-link active" href="{# {% url 'profile' profile.owner.id %} #}">Profile <span class="sr-only">(current)</span></a>
-							<a class="nav-item nav-link" href="{# {% url 'create_post' pk=profile.id %} #}">Add Post</a>
-							<a class="nav-item nav-link" href="{% url 'feed' %}">Feed</a>
-							<a class="nav-item nav-link" href="{% url 'signout' %}">Sign Out</a>
-
+      
 
 
 
 
-							{# search bar #}
-							<form class="form-inline" action="{% url 'search-users' %}" method="GET">
-							<div class="input-group">
-							<div class="input-group-prepend">
-							</div>
-							<input class="form-control mr-sm-2" type="search" placeholder="Username..." aria-label="Username" aria-describedby="basic-addon1" name="q"> 
-							<input class="btn btn-outline-info" type="submit" value="Search">
-							</div>
-							</form>
-						</div>
-				</div>
-	</nav>
-
-        {% else %}
+			<li class="nav-item">
+          <a class="nav-link " href="{% url 'signout' %}">Sign Out</a>
+        </li>
 
 
-
-        <nav class="navbar navbar-dark bg-dark">
-
-        <li class="nav-item text-right">
-        <a class="nav-link" href="{% url 'signup' %}}">Register</a>
-        <li class="nav-item text-right">
-        <a class="nav-link" href="{% url 'signin' %}}">Log in</a>
-      </li>
-      </li>
-
-
-
-
-{% endif %}
-
+      {% else %}
+      
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'signin' %}">Sign In</a>
+        </li>
+      {% endif %}
 
 
 		</nav>
