--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="row">
   <div class="col-12">
-    <div class="card">
+    <div class="card border-info">
       <div class="card-body">
         <h5 class="card-title text-center">@{{profile.owner.username}}</h5>
       </div>
