--- a/authentication/templates/base.html
+++ b/authentication/templates/base.html
@@ -24,15 +24,15 @@
           <a class="nav-link" href="{% url 'feed' %}">Feed</a>
         </li>
 
-      
-
-
-
 
 			<li class="nav-item">
           <a class="nav-link " href="{% url 'signout' %}">Sign Out</a>
         </li>
 
+    <form class="form-inline my-2 my-lg-0" action="{% url 'search-users' %}">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search for users..." aria-label="Search" name='q' value={{request.GET.q}}>
+      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+    </form>
 
       {% else %}
       
