--- a/profiles/templates/navbar.html
+++ b/profiles/templates/navbar.html
@@ -11,7 +11,7 @@
           <a class="nav-link" href="{% url 'signout' %}">Sign Out</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="{% url 'profile' request.user.id %}">{{request.user}}</a>
+          <a class="nav-link disabled" href="{% url 'profile' pk %}">{{request.user}}</a>
         </li>
       {% else %}
         <li class="nav-item">
