--- a/authentication/templates/base.html
+++ b/authentication/templates/base.html
@@ -10,39 +10,46 @@
 	</head>
 	<body>
 
-      {% if request.user.is_authenticated %}
+			{% if request.user.is_authenticated %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'profile' request.user.id %}">@{{request.user}}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+	<a class="navbar-brand" href="{% url 'profile' request.user.id %}">@{{request.user}}</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'feed' %}">Feed</a>
-        </li>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'feed' %}">Feed</a>
+				</li>
 
 
 			<li class="nav-item">
-          <a class="nav-link " href="{% url 'signout' %}">Sign Out</a>
-        </li>
+					<a class="nav-link " href="{% url 'signout' %}">Sign Out</a>
+				</li>
 
-    <form class="form-inline my-2 my-lg-0" action="{% url 'search-users' %}">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search for users..." aria-label="Search" name='q' value={{request.GET.q}}>
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-    </form>
+		<form class="form-inline my-2 my-lg-0" action="{% url 'search-users' %}">
+			<input class="form-control mr-sm-2" type="text" placeholder="Search for users..." aria-label="Search" name='q' value={{request.GET.q}}>
+			<button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+		</form>
 
-      {% else %}
-      
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'signin' %}">Sign In</a>
-        </li>
-      {% endif %}
+			{% else %}
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+					<div class="btn">
+						<a href="{% url 'signup' %}"><button type="button" class="btn btn-outline-info">Sign Up</button></a>
+					</div>
+					<div class="btn">
+						<a href="{% url 'signin' %}"><button type="button" class="btn btn-outline-info">Sign In</button></a>
+					</div>
+			 </nav>
+			{% endif %}
 
 
 		</nav>
@@ -61,11 +68,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 
 		<style>
 body  {
-    background-image: url("../../static/pic1.jpg");
+		background-image: url("../../static/pic1.jpg");
 }
 	</body>
 </html>
