--- a/authentication/templates/signin.html
+++ b/authentication/templates/signin.html
@@ -6,9 +6,15 @@ Sign In
 
 
 {% block content %}
+    <div class="col-14">
+    	<div class="card border-info col-12">
     <form action="{% url 'signin' %}" method="POST">
         {% csrf_token %}
         {{form|crispy}}
-        <input class = "btn btn-outline-primary" type="submit" value="Sign In">
-    </form>
+        <input class = "btn btn-outline-info" type="submit" value="Sign In">
+    </form>   
+        <br>
+   		 </div>
+	</div>
+
 {% endblock content %}
