--- a/profiles/templates/profile1.html
+++ b/profiles/templates/profile1.html
@@ -86,7 +86,7 @@
                   {% if rating.facility == facility %}
 
                     <br> Rating : {{rating.rating}}  <i class="far fa-star"></i> <br>
-                    Commint : {{rating.comment}}
+                    Comment : {{rating.comment}}
                   {% endif %}
                 {% endfor %}
               </div>
